--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "deep-diff": "^1.0.2",
     "lodash.isequal": "^4.5.0",
     "lodash.xorwith": "^4.5.0",
     "react": "^16.10.2",
@@ -26,6 +27,7 @@
     "check-types": "tsc"
   },
   "devDependencies": {
+    "@types/deep-diff": "^1.0.0",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.xorwith": "^4.5.6",
     "@types/react": "^16.9.23",
